removed photos from form

--- a/index.html
+++ b/index.html
@@ -40,21 +40,12 @@
               />
             </div>
             <div class="mb-3">
-              <label for="photo" class="form-label">Photo</label>
-              <input
-                type="url"
-                class="form-control"
-                id="photo"
-                placeholder="Enter an image URL of the place"
-              />
-            </div>
-            <div class="mb-3">
               <label for="description" class="form-label">Description</label>
               <textarea
                 class="form-control"
                 id="description"
                 rows="3"
-                placeholder="Where is it located?"
+                placeholder="Describe this destination"
               ></textarea>
             </div>
             <button type="submit" class="btn btn-primary">Add to list</button>
