--- a/index.html
+++ b/index.html
@@ -13,14 +13,19 @@
   <body>
     <div class="banner">
       <h1>Vacation Destinations WishList</h1>
-      <p>Found exciting places to visit on your next vacation? Use the form below to add them to your wishlist</p>
+      <p>
+        Found exciting places to visit on your next vacation? Use the form below
+        to add them to your wishlist
+      </p>
     </div>
     <div class="container mt-5">
       <div class="row">
         <div class="col-md-6">
           <form id="destinationForm">
             <div class="mb-3">
-              <label for="destinationName" class="form-label">Destination name</label>
+              <label for="destinationName" class="form-label"
+                >Destination name</label
+              >
               <input
                 type="text"
                 class="form-control"
@@ -59,6 +64,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
+    <!-- Replace the existing script tag with this one -->
+    <script src="script.js" type="module"></script>
   </body>
 </html>
